Fix footer nav links alignment

--- a/style.css
+++ b/style.css
@@ -367,6 +367,11 @@ body {
     padding-left: 10rem;
     padding-right: 10rem;
     justify-content: space-between;
+    align-items: flex-start;
+  }
+
+  .site__footer__logo {
+    margin-bottom: 1.5rem;
   }
 
   .site__footer__nav {
@@ -376,22 +381,29 @@ body {
     align-items: flex-start;
   }
 
+  .site__footer__nav > nav {
+    flex: 1 0 100%;
+    max-width: 100%;
+  }
+
   .site__footer__nav__link {
     flex: 0 0 0;
   }
 
   .site__footer__nav__link + .site__footer__nav__link {
-    padding-left: 2em;
+    padding-left: 1.5em;
   }
 
   .socials__and__copyright {
     flex: 1 0 50%;
     max-width: 50%;
     justify-content: flex-end;
+    margin-top: 0;
   }
 
   .socials {
     justify-content: flex-end;
+    margin-bottom: 1.5rem;
   }
 
   .attribution {
